--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
 		"friendsofcake/cakepdf": "^3.5",
 		"friendsofcake/cakephp-csvview": "~3.0",
 		"friendsofcake/search": "^4.4",
+		"funayaki/cakephp3-soft-delete": "^2.0",
 		"holt59/cakephp3-bootstrap-helpers": "dev-master",
 		"josegonzalez/dotenv": "2.*",
 		"lorenzo/audit-stash": "^2.0",
